--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <h1>TEST</h1>
+    <section>
+      <h1>
+        <span>T</span>
+        <span>Y</span>
+        <span>P</span>
+        <span>O</span>
+        <span>G</span>
+        <span>R</span>
+        <span>A</span>
+        <span>P</span>
+        <span>H</span>
+        <span>Y</span>
+      </h1>
+    </section>
+
   </body>
 </html>
