--- a/index.html
+++ b/index.html
@@ -9,19 +9,8 @@
   </head>
   <body>
     <section>
-      <h2>anonymous</h2>
-      <h1>
-        <span>T</span>
-        <span>Y</span>
-        <span>P</span>
-        <span>O</span>
-        <span>G</span>
-        <span>R</span>
-        <span>A</span>
-        <span>P</span>
-        <span>H</span>
-        <span>Y</span>
-      </h1>
+      <!-- <h2>anonymous</h2> -->
+      <h1>TYPOGRAPHY</h1>
     </section>
 
   </body>
